[package]
name = "mutagenyx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.1.6", features = ["derive"] }
env_logger = { version = "0.10.0", default-features = false }
mutagenyx_lib = { path = "../mutagenyx_lib" }
log = "0.4"
rand = "0.7"
rand_pcg = "0.2"
serde = { version = "1", features = ["derive"] }
termsize = "0.1"
