[package]
name = "mutagenyx_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonxf = "1.1"
log = "0.4"
num = "0.4"
rand = "0.7"
rand_pcg = "0.2"
rustc-serialize = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror ="1.0"
versions = "4.1.0"
