[package]
name = "mutagenyx_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
jsonxf = "1.1.1"
log = "0.4.17"
num = "0.4.0"
openssl-sys = "0.9.83"
openssl = "0.10.48"
rand = "0.7.3"
rand_pcg = "0.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.94"
thiserror ="1.0.40"
versions = "4.1.0"
